--- a/src/GanttBundle/Resources/public/css/gantt.css
+++ b/src/GanttBundle/Resources/public/css/gantt.css
@@ -227,7 +227,7 @@ body{
   top:0;
   position:absolute;
   width:18px;
-  background: url(res/milestone.png) no-repeat;
+  background: url(../res/milestone.png) no-repeat;
   height:18px;
   display:none;
 }
@@ -248,7 +248,7 @@ body{
 }
 
 .taskBoxDiv .layout.extDep{
-  background-image:url(res/hasExternalDeps.png);
+  background-image:url(../res/hasExternalDeps.png);
 }
 
 
@@ -362,11 +362,11 @@ input[readonly]{
 
 .expcoll{
   cursor: pointer;
-  background-image: url(res/toggle-expand.png);
+  background-image: url(../res/toggle-expand.png);
 }
 
 .expcoll.exp{
-  background-image: url(res/toggle_collapse.png);
+  background-image: url(../res/toggle_collapse.png);
 }
 
 .ui-resizable-helper { border: 1px dotted #00F;  }
