--- a/src/IndicateursBundle/Resources/views/Default/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,31 @@
-Hello World!
+{% extends 'base.html.twig' %}
+
+{% block title %}Indicateurs - Homepage {% endblock %}
+
+{% block stylesheets %}
+
+{% endblock %}
+
+{% block body %}
+
+
+
+    Délai de traitement
+        Anomalie
+        Support
+        Evolutions
+
+
+
+    Incidents :
+
+    Délai de prise en compte :
+
+
+
+{% endblock %}
+
+{% block javascripts %}
+
+{% endblock %}
+
