--- a/src/IndicateursBundle/Resources/views/Reouverture/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/Reouverture/index.html.twig
@@ -20,6 +20,26 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
+                <table id="reopenTable" class="display compact" cellspacing="0" width="100%">
+                    <thead>
+                    <tr>
+                        <th>Mois</th>
+                        <th class="select-filter">Projet</th>
+                        <th>Réouverture</th>
+                    </tr>
+                    </thead>
+                    <tfoot>
+                    <tr>
+                        <th>Mois</th>
+                        <th>Projet</th>
+                        <th>Réouverture</th>
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
                 <div id="chartContainer" style="height: 300px; width: 100%;">
             </div>
         </div>
@@ -27,6 +47,39 @@
     <script type="text/javascript">
         window.onload = function(){
             $(document).ready(function() {
+                $('#reopenTable').DataTable( {
+                    "ajax": "reopen/table/2016",
+                    "columns": [
+                        { "data": "Mois" },
+                        { "data": "Projet" },
+                        { "data": "Reouverture" }
+                    ],
+                    "columnDefs": [ {
+                        "targets": 0,
+                        "orderable": false,
+                        }
+                     ],
+                    initComplete: function () {
+                        this.api().columns('.select-filter').every( function () {
+                            var column = this;
+                            var select = $('<select><option value=""></option></select>')
+                                .appendTo( $(column.footer()).empty() )
+                                .on( 'change', function () {
+                                    var val = $.fn.dataTable.util.escapeRegex(
+                                        $(this).val()
+                                    );
+                                    column
+                                        .search( val ? '^'+val+'$' : '', true, false )
+                                        .draw();
+                                    getOpenCloseGraph($(this).val());
+                                } );
+
+                            column.data().unique().sort().each( function ( d, j ) {
+                                select.append( '<option value="'+d+'">'+d+'</option>' )
+                            } );
+                        } );
+                    }
+                } );
                 getOpenCloseGraph();
             } );
         };
