--- a/src/IndicateursBundle/Resources/views/Reouverture/index.html.twig
+++ b/src/IndicateursBundle/Resources/views/Reouverture/index.html.twig
@@ -1,30 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'IndicateursBundle:Default:Indicateur.html.twig' %}
 
-{% block title %}Indicateurs - Nombre d'ouverture / Fermeture {% endblock %}
+{% block indic_title %}Nombre d'ouverture / Fermeture {% endblock %}
 
-{% block stylesheets %}
-        {% stylesheets output='css/compiled/main.indic.css' filter='cssrewrite'
-        '@IndicateursBundle/Resources/public/css/datatables.min.css'
-        '@IndicateursBundle/Resources/public/css/jquery.dataTables.min.css'
-        '@IndicateursBundle/Resources/public/css/dataTables.bootstrap.min.css'%}
-        <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
-        {% endstylesheets %}
-{% endblock %}
-
-{% block body %}
+{% block indic_content %}
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h1>Tickets Réouverts</h1>
-            </div>
-        </div>
         <div class="row">
             <div class="col-sm-12">
                 <table id="reopenTable" class="display compact" cellspacing="0" width="100%">
                     <thead>
                     <tr>
-                        <th>Mois</th>
+                        <th class="select-filter">Mois</th>
                         <th class="select-filter">Projet</th>
+                        <th class="select-filter">Nature</th>
+                        <th class="select-filter">Priorité</th>
                         <th>Réouverture</th>
                     </tr>
                     </thead>
@@ -32,6 +20,8 @@
                     <tr>
                         <th>Mois</th>
                         <th>Projet</th>
+                        <th>Priorité</th>
+                        <th>Nature</th>
                         <th>Réouverture</th>
                     </tr>
                     </tfoot>
@@ -47,11 +37,14 @@
     <script type="text/javascript">
         window.onload = function(){
             $(document).ready(function() {
+                $.fn.dataTable.moment( 'MMMM','fr' );
                 $('#reopenTable').DataTable( {
                     "ajax": "reopen/table/2016",
                     "columns": [
                         { "data": "Mois" },
                         { "data": "Projet" },
+                        { "data": "Nature" },
+                        { "data": "Priorite" },
                         { "data": "Reouverture" }
                     ],
                     "columnDefs": [ {
@@ -59,6 +52,13 @@
                         "orderable": false,
                         }
                      ],
+                    "scrollY":        "350px",
+                    "scrollCollapse": true,
+                    "paging":         false,
+                    dom: 'Bfrtip',
+                    buttons: [
+                        'excel', 'pdf', 'print'
+                    ],
                     initComplete: function () {
                         this.api().columns('.select-filter').every( function () {
                             var column = this;
@@ -71,9 +71,9 @@
                                     column
                                         .search( val ? '^'+val+'$' : '', true, false )
                                         .draw();
-                                    getOpenCloseGraph($(this).val());
+                                    var title = column.header();
+                                    getOpenCloseGraph($(title).html(),$(this).val());
                                 } );
-
                             column.data().unique().sort().each( function ( d, j ) {
                                 select.append( '<option value="'+d+'">'+d+'</option>' )
                             } );
@@ -83,11 +83,34 @@
                 getOpenCloseGraph();
             } );
         };
-        function getOpenCloseGraph(project){
-            if(project){
-                 $.get( "reopen/graph/2016/"+project, function( data ) {
-                  $( "#chartContainer" ).html( data );
-                });
+        function getOpenCloseGraph(type,id){
+            if(type && id){
+                switch (type){
+                    case "Mois":
+                        $.get( "reopen/graph/2016/"+id, function( data ) {
+                          $( "#chartContainer" ).html( data );
+                        });
+                        break;
+                    case "Projet":
+                        $.get( "reopen/graph/2016/all/"+id, function( data ) {
+                          $( "#chartContainer" ).html( data );
+                        });
+                        break;
+                    case "Nature":
+                        $.get( "reopen/graph/2016/all/all/"+id, function( data ) {
+                          $( "#chartContainer" ).html( data );
+                        });
+                    break;
+                    case "Priorité":
+                        $.get( "reopen/graph/2016/all/all/all/"+id, function( data ) {
+                          $( "#chartContainer" ).html( data );
+                        });
+                        break;
+                    default:
+                        $.get( "reopen/graph/2016", function( data ) {
+                          $( "#chartContainer" ).html( data );
+                        });
+                }
             }else{
                 $.get( "reopen/graph/2016", function( data ) {
                   $( "#chartContainer" ).html( data );
@@ -96,13 +119,4 @@
 
         }
     </script>
-{% endblock %}
-
-{% block javascripts %}
-    {% javascripts output='js/compiled/main.indic.js'
-    '@IndicateursBundle/Resources/public/js/datatables.min.js'
-    '@IndicateursBundle/Resources/public/js/highcharts.js'
-    '@IndicateursBundle/Resources/public/js/modules/exporting.js'%}
-    <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
 {% endblock %}
