--- a/src/IndicateursBundle/Resources/views/Default/Indicateur.html.twig
+++ b/src/IndicateursBundle/Resources/views/Default/Indicateur.html.twig
@@ -36,5 +36,6 @@
     '@IndicateursBundle/Resources/public/js/datetime-moment.js'
     '@IndicateursBundle/Resources/public/js/highcharts.js'
     '@IndicateursBundle/Resources/public/js/modules/exporting.js'%}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
 {% endblock %}
