--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,6 @@
         'css/bootstrap.min.css'%}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
         {% endstylesheets %}
-
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -22,6 +21,7 @@
                         <li class="{% if (activeMenu is defined and activeMenu == 'homepage') %} active{% endif %}"><a href="{{ path('indicateurs_homepage') }}">Homepage <span class="sr-only">(current)</span></a></li>
                         <li class="{% if (activeMenu is defined and activeMenu == 'openclose') %} active{% endif %}"><a href="{{ path('indicateurs_openclose_homepage') }}">Ouvert/Fermé</a></li>
                         <li class="{% if (activeMenu is defined and activeMenu == 'reouverture') %} active{% endif %}"><a href="{{ path('indicateurs_reouverture_homepage') }}">Réouvertures</a></li>
+                        <li class="{% if (activeMenu is defined and activeMenu == 'contractuel') %} active{% endif %}"><a href="{{ path('indicateurs_contrat_reouverture_incident_homepage') }}">Contractuel</a></li>
                     </ul>
                 </div>
             </div>
